# ddp-resnet50-cifar10

./: .pre-commit-config.yaml  Main.py  README.md  pyproject.toml  ruff.toml
