[project]
name = "ddp-resnet50-cifar10"
version = "0.1.0"
description = "Pytorch DDP ResNet50 on CIFAR10"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.9.2",
    "torch>=2.4.1",
    "torchvision>=0.19.1",
]

[tool.uv]
dev-dependencies = [
    "pre-commit>=3.8.0",
    "ruff>=0.6.4",
]
